--- a/1.0-preproc.ipynb
+++ b/1.0-preproc.ipynb
@@ -378,203 +378,8 @@
     "def get_init_bi(sup_pre, dem):\n",
     "    return sup_pre - dem \n",
     "    \n",
-    "df['bi'] = df.apply(lambda x: get_bi(x['早九可借車數_pre'], x['早九借車人數'], x['早九空柱數量_pre']), axis = 1)\n",
-    "df['init_bi'] = df.apply(lambda x: get_init_bi(x['早九可借車數_pre'], x['早九借車人數']), axis = 1)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 47,
-   "id": "9988025e-3bde-44c6-89d8-5ec37bcbb1d5",
-   "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>所屬區域</th>\n",
-       "      <th>站位編號</th>\n",
-       "      <th>站位名稱</th>\n",
-       "      <th>站點位置</th>\n",
-       "      <th>早九可借車數</th>\n",
-       "      <th>早九空柱數量</th>\n",
-       "      <th>早九借車人數</th>\n",
-       "      <th>早九還車人數</th>\n",
-       "      <th>晚五可借車數</th>\n",
-       "      <th>晚五空柱數量</th>\n",
-       "      <th>晚五借車人數</th>\n",
-       "      <th>晚五還車人數</th>\n",
-       "      <th>總車柱</th>\n",
-       "      <th>早九可借車數_pre</th>\n",
-       "      <th>早九空柱數量_pre</th>\n",
-       "      <th>晚五可借車數_pre</th>\n",
-       "      <th>晚五空柱數量_pre</th>\n",
-       "      <th>bi</th>\n",
-       "      <th>init_bi</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>捷運公館站周邊</td>\n",
-       "      <td>1-1</td>\n",
-       "      <td>捷運公館站(1號出口)</td>\n",
-       "      <td>羅斯福路四段68號</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>15</td>\n",
-       "      <td>14</td>\n",
-       "      <td>3.0</td>\n",
-       "      <td>9.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>20</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>1.0</td>\n",
-       "      <td>11.0</td>\n",
-       "      <td>-10.0</td>\n",
-       "      <td>-13.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>捷運公館站周邊</td>\n",
-       "      <td>1-2</td>\n",
-       "      <td>捷運公館站(2號出口)</td>\n",
-       "      <td>捷運公館站(2號出口)外側</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>51.0</td>\n",
-       "      <td>36</td>\n",
-       "      <td>25</td>\n",
-       "      <td>38.0</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>43</td>\n",
-       "      <td>99.0</td>\n",
-       "      <td>24.0</td>\n",
-       "      <td>75.0</td>\n",
-       "      <td>27.0</td>\n",
-       "      <td>72.0</td>\n",
-       "      <td>-12.0</td>\n",
-       "      <td>-12.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>捷運公館站周邊</td>\n",
-       "      <td>1-3</td>\n",
-       "      <td>臺大大一女舍北側</td>\n",
-       "      <td>臺大女一舍北側</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>49.0</td>\n",
-       "      <td>26</td>\n",
-       "      <td>18</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>48.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>31</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>0.0</td>\n",
-       "      <td>53.0</td>\n",
-       "      <td>-26.0</td>\n",
-       "      <td>-26.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>3</th>\n",
-       "      <td>捷運公館站周邊</td>\n",
-       "      <td>1-4</td>\n",
-       "      <td>捷運公館站(4號出口)</td>\n",
-       "      <td>羅斯福路四段48號</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>7.0</td>\n",
-       "      <td>9</td>\n",
-       "      <td>9</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>3</td>\n",
-       "      <td>11</td>\n",
-       "      <td>12.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>2.0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>-7.0</td>\n",
-       "      <td>-7.0</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>水源校區</td>\n",
-       "      <td>2-1</td>\n",
-       "      <td>臺大水源舍區B棟</td>\n",
-       "      <td>汀洲路三段60巷2弄路側(B舍北側)</td>\n",
-       "      <td>8.0</td>\n",
-       "      <td>22.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>10.0</td>\n",
-       "      <td>20.0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>0</td>\n",
-       "      <td>30.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>26.0</td>\n",
-       "      <td>5.0</td>\n",
-       "      <td>25.0</td>\n",
-       "      <td>4.0</td>\n",
-       "      <td>4.0</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "      所屬區域 站位編號         站位名稱                站點位置  早九可借車數  早九空柱數量  早九借車人數  \\\n",
-       "0  捷運公館站周邊  1-1  捷運公館站(1號出口)           羅斯福路四段68號     5.0     7.0      15   \n",
-       "1  捷運公館站周邊  1-2  捷運公館站(2號出口)       捷運公館站(2號出口)外側    48.0    51.0      36   \n",
-       "2  捷運公館站周邊  1-3     臺大大一女舍北側             臺大女一舍北側     4.0    49.0      26   \n",
-       "3  捷運公館站周邊  1-4  捷運公館站(4號出口)           羅斯福路四段48號     5.0     7.0       9   \n",
-       "4     水源校區  2-1     臺大水源舍區B棟  汀洲路三段60巷2弄路側(B舍北側)     8.0    22.0       0   \n",
-       "\n",
-       "   早九還車人數  晚五可借車數  晚五空柱數量  晚五借車人數  晚五還車人數   總車柱  早九可借車數_pre  早九空柱數量_pre  \\\n",
-       "0      14     3.0     9.0       3      20  12.0         2.0        10.0   \n",
-       "1      25    38.0    61.0       9      43  99.0        24.0        75.0   \n",
-       "2      18     5.0    48.0       9      31  53.0         0.0        53.0   \n",
-       "3       9     4.0     8.0       3      11  12.0         2.0        10.0   \n",
-       "4       0    10.0    20.0       0       0  30.0         4.0        26.0   \n",
-       "\n",
-       "   晚五可借車數_pre  晚五空柱數量_pre    bi  init_bi  \n",
-       "0         1.0        11.0 -10.0    -13.0  \n",
-       "1        27.0        72.0 -12.0    -12.0  \n",
-       "2         0.0        53.0 -26.0    -26.0  \n",
-       "3         2.0        10.0  -7.0     -7.0  \n",
-       "4         5.0        25.0   4.0      4.0  "
-      ]
-     },
-     "execution_count": 47,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
-   "source": [
-    "df.head()"
+    "# df['bi'] = df.apply(lambda x: get_bi(x['早九可借車數_pre'], x['早九借車人數'], x['早九空柱數量_pre']), axis = 1)\n",
+    "# df['init_bi'] = df.apply(lambda x: get_init_bi(x['早九可借車數_pre'], x['早九借車人數']), axis = 1)"
    ]
   },
   {
@@ -645,7 +450,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 93,
+   "execution_count": 103,
    "id": "1f625c92-6526-4611-848c-e79a50f1f249",
    "metadata": {},
    "outputs": [],
@@ -653,15 +458,17 @@
     "import joblib\n",
     "\n",
     "\n",
-    "def generate_testcases(sd_path, \n",
-    "                      distpath = distpath):\n",
+    "def generate_testcases(sd_path = stoppath, \n",
+    "                      distpath = distpath,\n",
+    "                      ismorn = True):\n",
     "    \n",
     "    \n",
     "    df = pd.read_csv(sd_path)\n",
     "    df.fillna(0, inplace =True)\n",
-    "    df['bi'] = df.apply(lambda x: get_bi(x['早九可借車數_pre'], x['早九借車人數'], x['早九空柱數量_pre']), axis = 1)\n",
-    "    df['init_bi'] = df.apply(lambda x: get_init_bi(x['早九可借車數_pre'], x['早九借車人數']), axis = 1)\n",
-    "    \n",
+    "    time = '早九' if ismorn else '晚五'\n",
+    "    entime = 'morn' if ismorn else 'even'\n",
+    "    df['bi'] = df.apply(lambda x: get_bi(x[f'{time}可借車數_pre'], x[f'{time}借車人數'], x[f'{time}空柱數量_pre']), axis = 1)\n",
+    "    df['init_bi'] = df.apply(lambda x: get_init_bi(x[f'{time}可借車數_pre'], x[f'{time}借車人數']), axis = 1)\n",
     "    \n",
     "    n_node = len(df)\n",
     "    d = get_dmat(distpath)\n",
@@ -684,15 +491,15 @@
     "        for Q in range(15, 30+1, 5):\n",
     "            testcase['n_vehicle'] = n_vehicle\n",
     "            testcase['Q'] = Q\n",
-    "            filename = f'{file_prefix}_k{n_vehicle}_Q{Q}'\n",
+    "            filename = f'{file_prefix}_{entime}_k{n_vehicle}_Q{Q}'\n",
     "            joblib.dump(testcase, filename)\n",
-    "            print(f'saving to {filename}')\n",
-    "            print('--------------')\n"
+    "            # print(f'saving to {filename}')\n",
+    "            # print('--------------')\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 94,
+   "execution_count": 104,
    "id": "d303f0f8-94b6-4da8-ac42-9d000b198a86",
    "metadata": {},
    "outputs": [
@@ -706,51 +513,18 @@
       "n_node: 82\n",
       "d (83 * 83 list)\n",
       "b (1 * 83 list)\n",
-      "saving to ./data/testcases/testcase_k1_Q15\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k1_Q20\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k1_Q25\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k1_Q30\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k2_Q15\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k2_Q20\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k2_Q25\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k2_Q30\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k3_Q15\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k3_Q20\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k3_Q25\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k3_Q30\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k4_Q15\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k4_Q20\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k4_Q25\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k4_Q30\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k5_Q15\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k5_Q20\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k5_Q25\n",
-      "--------------\n",
-      "saving to ./data/testcases/testcase_k5_Q30\n",
-      "--------------\n"
+      "(raw) n_node: 82 \n",
+      "(adding depot) n_node: 83 \n",
+      "final distance matrix size: (83, 83)\n",
+      "n_node: 82\n",
+      "d (83 * 83 list)\n",
+      "b (1 * 83 list)\n"
      ]
     }
    ],
    "source": [
-    "generate_testcases(stoppath, distpath)"
+    "generate_testcases(stoppath, distpath, ismorn = True)\n",
+    "generate_testcases(stoppath, distpath, ismorn = False)"
    ]
   },
   {
@@ -952,6 +726,7 @@
     }
    ],
    "source": [
+    "import joblib\n",
     "joblib.load('./data/testcases/testcase_k1_Q15')"
    ]
   },
