--- a/1.0-preproc.ipynb
+++ b/1.0-preproc.ipynb
@@ -217,7 +217,7 @@
     "    print(f'(raw) n_node: {n_node} ')\n",
     "    print(f'(adding depot) n_node: {n_node+1} ')\n",
     "    print(f'final distance matrix size: {newd.shape}')\n",
-    "    return newd\n",
+    "    return newd.tolist()\n",
     "    "
    ]
   },
@@ -342,7 +342,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 330,
+   "execution_count": 331,
    "id": "bc08897f-5836-4189-a93c-d64858741091",
    "metadata": {},
    "outputs": [
@@ -352,7 +352,9 @@
      "text": [
       "(82, 82)\n",
       "82\n",
-      "81\n"
+      "81\n",
+      "30\n",
+      "5\n"
      ]
     }
    ],
@@ -368,7 +370,9 @@
     "# print(testcase)\n",
     "print(d.shape)\n",
     "print(len(b))\n",
-    "print(n_node) "
+    "print(n_node) \n",
+    "print(Q)\n",
+    "print(n_vehicle)"
    ]
   },
   {
