--- a/1.0-preproc.ipynb
+++ b/1.0-preproc.ipynb
@@ -197,7 +197,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 332,
+   "execution_count": 336,
    "id": "9418fb0f-6416-4c61-9e01-a7dc47e5f180",
    "metadata": {},
    "outputs": [],
@@ -217,7 +217,7 @@
     "    print(f'(raw) n_node: {n_node} ')\n",
     "    print(f'(adding depot) n_node: {n_node+1} ')\n",
     "    print(f'final distance matrix size: {newd.shape}')\n",
-    "    return newd.tolist()\n",
+    "    return newd\n",
     "    "
    ]
   },
@@ -272,7 +272,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 334,
+   "execution_count": 337,
    "id": "1f625c92-6526-4611-848c-e79a50f1f249",
    "metadata": {},
    "outputs": [],
@@ -310,7 +310,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 335,
+   "execution_count": 338,
    "id": "d303f0f8-94b6-4da8-ac42-9d000b198a86",
    "metadata": {},
    "outputs": [
