--- a/1.5-mini-cases.ipynb
+++ b/1.5-mini-cases.ipynb
@@ -13,21 +13,22 @@
    "id": "053a175d-5a59-42e2-bd8b-d98c9a012c84",
    "metadata": {},
    "source": [
-    "1. get the one stop from each section \n",
+    "Nana\n",
+    "1. get one stop from each section \n",
     "    我自己是肉眼看挑比較離台大不要太遠、比較有代表性、比較大的站點，沒特別想法的話就選站點1。    \n",
     "    （https://drive.google.com/drive/folders/1oTzk_Mel65__q8qR9tv4TFEtk5vrnnAB）\n",
     "    \n",
     "2. select from the distance matrix, the matrix is saved @ mini_dmat.txt \n",
     "    (with depot node)\n",
-    "   , and mini_dmat_withou_depot.txt is without depot node. \n",
-    "   , select and reorder the dataframe to mini_Ubike站點供給.csv\n",
+    "   , and mini_dmat_withou_depot.txt is without depot node.\n",
+    "   Select and reorder the dataframe to mini_Ubike站點供給.csv\n",
     "   \n",
     "3. output testcases **without n_vehickle and capacity** into mini_testcase_早九 and mini_testcase_晚五"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 1,
    "id": "2e35f983-c5c0-42ac-85b1-a365e229e204",
    "metadata": {},
    "outputs": [],
@@ -41,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "04d50ab1-d848-4398-997c-3887f33900dd",
    "metadata": {},
    "outputs": [],
@@ -53,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "id": "6f2f2599-1142-4d64-bdee-ea93f1f0c5b5",
    "metadata": {},
    "outputs": [],
@@ -72,7 +73,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 4,
    "id": "003f598c-e9e8-4f74-9aa2-b746c5af3829",
    "metadata": {},
    "outputs": [],
@@ -82,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 5,
    "id": "d0bbae9a-a6ab-4db6-bab4-e5497d353ad9",
    "metadata": {},
    "outputs": [],
@@ -96,7 +97,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "ddeb75e0-615b-428c-82ab-761c2477be7c",
    "metadata": {},
    "outputs": [],
@@ -104,44 +105,46 @@
     "mini_stop2idx = {}\n",
     "for k, v in stop2idx.items():\n",
     "    if v[1] in keeps:\n",
+    "        sec = int(v[1].split('-')[0])\n",
+    "        v.append(sec)\n",
     "        mini_stop2idx[k] = v\n",
     "# joblib.dump(stop2idx, './data/mini_stop2idx.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "f459a467-c428-4ebe-a482-8d1f4c19a47b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'新生南路三段82號前': [3, '16-4'],\n",
-       " '捷運公館站(2號出口)': [11, '1-2'],\n",
-       " '臺大法人語言訓練中心前': [15, '10-1'],\n",
-       " '辛亥新生路口東南側': [17, '13-1'],\n",
-       " '臺大天文數學館南側': [29, '11-1'],\n",
-       " '臺大舊體育館西側': [34, '12-1'],\n",
-       " '臺大公館停車場西北側': [38, '3-4'],\n",
-       " '臺大第二行政大樓南側': [39, '6-1'],\n",
-       " '臺大明達館機車停車場': [40, '8-1'],\n",
-       " '臺大第一活動中心西南側': [51, '7-4'],\n",
-       " '臺大博理館西側': [52, '9-1'],\n",
-       " '臺大一號館': [55, '5-3'],\n",
-       " '臺大小小福西南側': [56, '4-1'],\n",
-       " '捷運科技大樓站': [66, '14-1'],\n",
-       " '臺大水源舍區B棟': [78, '2-1'],\n",
-       " '捷運臺電大樓站(2號出口)': [81, '15-1']}"
+       "[('捷運公館站(2號出口)', [11, '1-2', 1]),\n",
+       " ('臺大水源舍區B棟', [78, '2-1', 2]),\n",
+       " ('臺大公館停車場西北側', [38, '3-4', 3]),\n",
+       " ('臺大小小福西南側', [56, '4-1', 4]),\n",
+       " ('臺大一號館', [55, '5-3', 5]),\n",
+       " ('臺大第二行政大樓南側', [39, '6-1', 6]),\n",
+       " ('臺大第一活動中心西南側', [51, '7-4', 7]),\n",
+       " ('臺大明達館機車停車場', [40, '8-1', 8]),\n",
+       " ('臺大博理館西側', [52, '9-1', 9]),\n",
+       " ('臺大法人語言訓練中心前', [15, '10-1', 10]),\n",
+       " ('臺大天文數學館南側', [29, '11-1', 11]),\n",
+       " ('臺大舊體育館西側', [34, '12-1', 12]),\n",
+       " ('辛亥新生路口東南側', [17, '13-1', 13]),\n",
+       " ('捷運科技大樓站', [66, '14-1', 14]),\n",
+       " ('捷運臺電大樓站(2號出口)', [81, '15-1', 15]),\n",
+       " ('新生南路三段82號前', [3, '16-4', 16])]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "mini_stop2idx"
+    "sorted(mini_stop2idx.items(), key = lambda x:x[1][-1])"
    ]
   },
   {
@@ -365,7 +368,6 @@
     "              dmatrixpath = './data/mini_dmat.txt'):\n",
     "    dmat = np.loadtxt(dmatrixpath, delimiter=',')\n",
     "    for time in ['早九', '晚五']:\n",
-    "        \n",
     "        dire = './data/mini-testcases'\n",
     "        file_prefix = f'{dire}/mini_testcase'\n",
     "        b = data[f'{time}_bi'].tolist()\n",
@@ -410,7 +412,7 @@
    "source": [
     "case = joblib.load('./data/mini-testcases/mini_testcase_早九')\n",
     "print(case['d'].shape)\n",
-    "len(case['b'])\n"
+    "len(case['b'])"
    ]
   },
   {
