Make new b value

--- a/1.5-mini-cases.ipynb
+++ b/1.5-mini-cases.ipynb
@@ -28,7 +28,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "id": "2e35f983-c5c0-42ac-85b1-a365e229e204",
    "metadata": {},
    "outputs": [],
@@ -42,7 +42,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "id": "04d50ab1-d848-4398-997c-3887f33900dd",
    "metadata": {},
    "outputs": [],
@@ -54,7 +54,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 12,
    "id": "6f2f2599-1142-4d64-bdee-ea93f1f0c5b5",
    "metadata": {},
    "outputs": [],
@@ -83,7 +83,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 13,
    "id": "d0bbae9a-a6ab-4db6-bab4-e5497d353ad9",
    "metadata": {},
    "outputs": [],
@@ -97,10 +97,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 14,
    "id": "ddeb75e0-615b-428c-82ab-761c2477be7c",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['./data/mini_stop2idx.pkl']"
+      ]
+     },
+     "execution_count": 14,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "mini_stop2idx = {}\n",
     "for k, v in stop2idx.items():\n",
@@ -108,43 +119,29 @@
     "        sec = int(v[1].split('-')[0])\n",
     "        v.append(sec)\n",
     "        mini_stop2idx[k] = v\n",
-    "# joblib.dump(stop2idx, './data/mini_stop2idx.pkl')"
+    "joblib.dump(mini_stop2idx, './data/mini_stop2idx.pkl')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 17,
    "id": "f459a467-c428-4ebe-a482-8d1f4c19a47b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "[('捷運公館站(2號出口)', [11, '1-2', 1]),\n",
-       " ('臺大水源舍區B棟', [78, '2-1', 2]),\n",
-       " ('臺大公館停車場西北側', [38, '3-4', 3]),\n",
-       " ('臺大小小福西南側', [56, '4-1', 4]),\n",
-       " ('臺大一號館', [55, '5-3', 5]),\n",
-       " ('臺大第二行政大樓南側', [39, '6-1', 6]),\n",
-       " ('臺大第一活動中心西南側', [51, '7-4', 7]),\n",
-       " ('臺大明達館機車停車場', [40, '8-1', 8]),\n",
-       " ('臺大博理館西側', [52, '9-1', 9]),\n",
-       " ('臺大法人語言訓練中心前', [15, '10-1', 10]),\n",
-       " ('臺大天文數學館南側', [29, '11-1', 11]),\n",
-       " ('臺大舊體育館西側', [34, '12-1', 12]),\n",
-       " ('辛亥新生路口東南側', [17, '13-1', 13]),\n",
-       " ('捷運科技大樓站', [66, '14-1', 14]),\n",
-       " ('捷運臺電大樓站(2號出口)', [81, '15-1', 15]),\n",
-       " ('新生南路三段82號前', [3, '16-4', 16])]"
+       "['./data/mini-testcases/mini_stop2idx.pkl']"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "sorted(mini_stop2idx.items(), key = lambda x:x[1][-1])"
+    "sorted(mini_stop2idx.items(), key = lambda x:x[1][-1])\n",
+    "joblib.dump(mini_stop2idx, './data/mini-testcases/mini_stop2idx.pkl')"
    ]
   },
   {
